# n-body-sycl

./: .gitignore  CMakeLists.txt  Readme.md  energy.py
include/: constants.hpp  helper.hpp  particle.hpp  screen.hpp  simulation.hpp
src/: main.cpp  screen.cpp  simulation.cpp
